--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+html {
+  background: url(http://thekitemap.com/images/feedback-img.jpg) no-repeat;
+  background-size: cover;
+  height: 100%;
+}
+
 /*body {
   text-align: center;
   font-family: courier;
@@ -20,11 +26,6 @@
 
 .my_social a img {
   height: 1.5em;
-}
-
-html{    background:url(http://thekitemap.com/images/feedback-img.jpg) no-repeat;
-  background-size: cover;
-  height:100%;
 }
 
 #feedback-page{
