--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,11 @@ html {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-#feedback-page{
+/*#feedback-page{
 	text-align:center;
 }
 
