--- a/css/styles.css
+++ b/css/styles.css
@@ -73,9 +73,9 @@ html {
   padding: 13px 13px 13px 54px;
 }
 
-/*.focused{
-	color:#30aed6;
-	border:#30aed6 solid 3px;
+.focused {
+  color: #30aed6;
+  border: #30aed6 solid 3px;
 }
 
 /* Icons ---------------------------------- */
