--- a/css/styles.css
+++ b/css/styles.css
@@ -109,14 +109,14 @@ html {
   background-repeat: no-repeat;
 }
 
-/*#comment{
-	background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
-	background-size: 30px 30px;
-	background-position: 11px 8px;
-	background-repeat: no-repeat;
+#comment {
+  background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat;
 }
 
-textarea {
+/*textarea {
     width: 100%;
     height: 150px;
     line-height: 150%;
