--- a/css/styles.css
+++ b/css/styles.css
@@ -116,14 +116,14 @@ html {
   background-repeat: no-repeat;
 }
 
-/*textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize:vertical;
+textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical;
 }
 
-input:hover, textarea:hover,
+/*input:hover, textarea:hover,
 input:focus, textarea:focus {
 	background-color:white;
 }
