--- a/css/styles.css
+++ b/css/styles.css
@@ -154,18 +154,18 @@ input:hover, textarea:hover, input:focus, textarea:focus {
   color: #3498db;
 }
 
-/*.ease {
-	width: 0px;
-	height: 74px;
-	background-color: #fbfbfb;
-	-webkit-transition: .3s ease;
-	-moz-transition: .3s ease;
-	-o-transition: .3s ease;
-	-ms-transition: .3s ease;
-	transition: .3s ease;
+.ease {
+  width: 0px;
+  height: 74px;
+  background-color: #fbfbfb;
+  -webkit-transition: .3s ease;
+  -moz-transition: .3s ease;
+  -o-transition: .3s ease;
+  -ms-transition: .3s ease;
+  transition: .3s ease;
 }
 
-.submit:hover .ease{
+/*.submit:hover .ease{
   width:100%;
   background-color:white;
 }
