--- a/css/styles.css
+++ b/css/styles.css
@@ -181,12 +181,12 @@ input:hover, textarea:hover, input:focus, textarea:focus {
   }
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
