--- a/css/styles.css
+++ b/css/styles.css
@@ -213,13 +213,13 @@ input:hover, textarea:hover, input:focus, textarea:focus {
   transition: all 0.4s linear;
 }
 
-/*.cal caption {
+.cal caption {
   background: #d44;
   color: #eee;
   font-size: 15px;
 }
 
-.cal th {
+/*.cal th {
   color: #aaa;
   line-height: 200%;
 }
