--- a/css/styles.css
+++ b/css/styles.css
@@ -219,12 +219,12 @@ input:hover, textarea:hover, input:focus, textarea:focus {
   font-size: 15px;
 }
 
-/*.cal th {
+.cal th {
   color: #aaa;
   line-height: 200%;
 }
 
-.cal th:first-child {
+/*.cal th:first-child {
   color: #f00;
 }
 
