--- a/css/styles.css
+++ b/css/styles.css
@@ -224,11 +224,11 @@ input:hover, textarea:hover, input:focus, textarea:focus {
   line-height: 200%;
 }
 
-/*.cal th:first-child {
+.cal th:first-child {
   color: #f00;
 }
 
-.cal th:last-child {
+/*.cal th:last-child {
   color: #04d;
 }
 
