--- a/css/styles.css
+++ b/css/styles.css
@@ -228,11 +228,11 @@ input:hover, textarea:hover, input:focus, textarea:focus {
   color: #f00;
 }
 
-/*.cal th:last-child {
+.cal th:last-child {
   color: #04d;
 }
 
-.cal td {
+/*.cal td {
   padding: 0 2px;
   line-height: 100%;
 }
