--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ input:hover, textarea:hover, input:focus, textarea:focus {
   color: #04d;
 }
 
-/*.cal td {
+.cal td {
   padding: 0 2px;
   line-height: 100%;
 }
